# FluidApp

./: .gitignore  CMakeLists.txt  Cell.h  ContWindow.cpp  ContWindow.h  CpuLbm.h  FluidApp.cpp  FluidApp.h  Grid.cpp  Grid.h  Lbm.cpp  Lbm.h  Particles.cpp  Particles.h  README.md  Settings.cpp  Settings.h  SimWindow.cpp  SimWindow.h  Simulation.cpp  Simulation.h  ToolWindow.cpp  ToolWindow.h  clerr.h  clu.cpp  clu.h  main.cpp
cmake/Modules/: FindOpenCL.cmake
data/: settings.json
data/kernels/: heatmap.cl  lattice.cl  part1.cl  part2.cl  particles.cl
